# alix-rust

./: Cargo.toml  README.md  build-rpi.sh  linker.ld
.cargo/: config.toml
docs/: README.md  arch.md  boot.md  build.md  drivers.md  gfx.md  interrupts.md  memory.md  platform.md  process.md  scheduling.md  syscalls.md  user.md  vfs.md
docs/todo/: memory.md
scripts/: build-qemu.sh  build-rpi5-image.sh  build.sh  gdb.sh  run-qemu-gdb.sh  run-qemu.sh
src/: board.rs  drivers.rs  framebuffer.rs  interrupts.rs  kernel.rs  mailbox.rs  main.rs  mmio.rs  platform.rs  process.rs  smp.rs  trap.rs  uart.rs
src/arch/: aarch64.rs
src/arch/aarch64/: boot.S  exception.S  mmu.rs  timer.rs  trap.rs
src/drivers/: framebuffer.rs  gic.rs  keyboard.rs  local_intc.rs  mailbox.rs  uart.rs
src/gfx/: font.rs
src/kernel/: interrupts.rs  process.rs  smp.rs  syscall.rs  user.rs  vfs.rs
src/kernel/process/: scheduler.rs
src/mm/: bootalloc.rs  dtb.rs  frame.rs  heap.rs  layout.rs  mod.rs  paging.rs  region.rs
src/platform/: board.rs  simplefb.rs
src/user/: shell.rs
src/util/: sync.rs
targets/: aarch64-raspi3.json  aarch64-raspi5.json
